--- a/src/components/TrialPreview/index.css
+++ b/src/components/TrialPreview/index.css
@@ -11,6 +11,7 @@
     justify-content: center;
     width: 100%;
     min-width: 345px;
+    margin: 32px 0;
 }
 
 @media (max-width: 2100px) {
